--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>To-Do App</title>
 </head>
 <body>
     <h1>To Do</h1>
     <div class="container">
-        <input id="inputfield" type="text"><button id="addToDo>+</button>
-        
+        <input id="inputfield" type="text"><button id="addToDo">+</button>
+        <div class="to-dos" id="toDoContainer">
+
+        </div>
     </div>
+    <script src="todo.js"></button>
 </body>
 </html>
