Cleaned code, fixed errors

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <div class="container">
         <input id="inputfield" type="text"><button id="addToDo">+</button>
         <div class="to-dos" id="toDoContainer">
-
         </div> 
     </div>
-    <script src="todo.js"></button>
+    <script src="todo.js"></script>
 </body>
 </html>
